--- a/index.html
+++ b/index.html
@@ -2,9 +2,24 @@
 <html>
 <head>
   <title>Your Name's Resume</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background-color: #f5f5f5;
+    }
+    iframe {
+      width: 80%;
+      height: 90%;
+      border: none;
+    }
+  </style>
 </head>
 <body>
-  <h1>Muruli's resume</h1>
-  <p>Download my resume <a href="Muruli_2yrs_QA.pdf" download>here</a>.</p>
+  <iframe src="Muruli_2yrs_QA.pdf" type="application/pdf"></iframe>
 </body>
 </html>
